Solid Investigate fix issue with null